<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="com.login.rafael.loginapp.LoginActivity">

  <!--  <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/tool_bar">
    </android.support.v7.widget.Toolbar>-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appname"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="30dp"
        android:layout_marginTop="30dp"
        android:textColor="#ffffff"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt1"
            android:text="@string/email"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:textColor="#ffffff"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="18dp"
            android:textColor="#ffffff"
            android:layout_below="@+id/txt1"
            android:id="@+id/email"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt2"
            android:text="@string/pass"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_alignParentLeft="true"
            android:textColor="#ffffff"
            android:layout_below="@+id/email"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="18dp"
            android:textColor="#ffffff"
            android:layout_below="@+id/txt2"
            android:id="@+id/pass"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_below="@+id/pass"
            style="?android:textAppearanceSmall"
            android:layout_marginTop="35dp"
            android:background="@drawable/button_selector"
            android:id="@+id/login_btn"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="#ffffff"
            android:textSize="18dp"
            android:gravity="center"
            android:id="@+id/signup"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="45dp" />

    </RelativeLayout>

</LinearLayout>